--- a/src/assets/style/page.css
+++ b/src/assets/style/page.css
@@ -387,12 +387,10 @@ body {
   justify-content: center;
   align-items: center;
 
-  /* tambahin ini */
   background-image: url('@/assets/images/sad-face.svg');
   background-repeat: no-repeat;
-  background-position: center 60%;
-  background-size: 60%;
-  opacity: 1;
+  background-position: calc(90% + 10px) 70%;
+  background-size: 90%;
 }
 
 .unavailable-content {
